--- a/.github/workflows/main_agent-unveil-app.yml
+++ b/.github/workflows/main_agent-unveil-app.yml
@@ -73,6 +73,7 @@ jobs:
         with:
           app-name: agent-unveil-app
           slot-name: ''
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/.
+          package: .
 
           
+
